<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!--header-->
    <LinearLayout
        android:id="@+id/cal_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_monday"
            android:textSize="@dimen/side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_tuesday"
            android:textSize="@dimen/side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_wednesday"
            android:textSize="@dimen/side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_thursday"
            android:textSize="@dimen/side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_friday"
            android:textSize="@dimen/side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_saturday"
            android:textSize="@dimen/side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/abbrev_sunday"
            android:textSize="@dimen/side_text_size" />

    </LinearLayout>

    <GridView
        android:id="@+id/cal_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7" />

</LinearLayout>